examples/typechecking/trait_propagation.an

bar: a = extern bar

trait Baz a = baz: fn a -> Unit

foo () = baz bar

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// (bar: a) = extern "bar"
// 
// type Baz a =
//     baz: fn a [Ptr Unit] -> Unit
// 
// (foo: fn Unit -> Unit) () = (baz: fn _ {Baz _} [Ptr Unit] -> Unit) (bar: _) {(error)}

// expected stderr:
// examples/typechecking/trait_propagation.an:6:10
// 6 | foo () = baz bar	// error: No implicit found for type Baz _ required by baz
//   |          ^^^
// 
// Found 1 error and 0 warnings

